--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>java-course</title>
 
     <link href="./css/bootstrap-custom.min.css" rel="stylesheet">
-    <link href="./css/font-awesome-4.5.0.css" rel="stylesheet">
+    <link href="./css/font-awesome.min.css" rel="stylesheet">
     <link href="./css/base.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/highlight.css">
     <link href="./css/extra.css" rel="stylesheet">
@@ -23,7 +23,7 @@
     <![endif]-->
 </head>
 
-<body class="homepage">s
+<body class="homepage">
     <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
 
@@ -54,14 +54,6 @@
                 <ul class="nav bs-sidenav">
                     <li class="main active"><a href="#java-course">Java Course</a></li>
                     <li><a href="#intro">Introducción</a></li>
-                    <li><a href="#example2">Example</a></li>
-                    <li><a href="#example3">Example</a></li>
-                    <li><a href="#example4">Example</a></li>
-                    <li><a href="#example5">Example</a></li>
-                    <li><a href="#example6">Example</a></li>
-                    <li><a href="#example7">Example</a></li>
-                    <li><a href="#example8">Example</a></li>
-                    <li><a href="#example9">Example</a></li>
                 </ul>
             </div>
         </div>
@@ -86,7 +78,7 @@
 
     <footer class="col-md-12">
         <hr>
-        <p>Copyright &copy; 2016 <a href="">Miguel Salazar</a></p>
+        <p>With <i class="fa fa-hand-peace-o" aria-hidden="true"></i> by <a href="http://migsalazar.com">Mig Salazar</a></p>
     </footer>
 
     <script src="./js/jquery-1.10.2.min.js"></script>
