add folder change path

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- Expanded navigation -->
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a id="slides-link" href="slides.html"><i class="fa fa-desktop"></i> Presentación</a></li>
+                    <li><a id="slides-link" href="slides/index.html"><i class="fa fa-desktop"></i> Presentación</a></li>
                     <li><a href="https://github.com/migsalazar/java-course"><i class="fa fa-github-alt"></i> Código fuente</a></li>
                 </ul>
             </div>
