--- a/slides/index.html
+++ b/slides/index.html
@@ -7,8 +7,8 @@
     <meta name="description" content="Java course">
     <meta name="author" content="Miguel Salazar">
     <link rel="canonical" href="http://migsalazar.com/java-course">
-    <link rel="stylesheet" href="revealjs/css/reveal.css">
-    <link rel="stylesheet" href="revealjs/css/theme/black.css">
+    <link rel="stylesheet" href="../revealjs/css/reveal.css">
+    <link rel="stylesheet" href="../revealjs/css/theme/black.css">
 
     <title>java-course</title>
 
@@ -27,8 +27,8 @@
                 <section>Test slide 2</section>
             </div>
         </div>
-        <script src="js/jquery-1.10.2.min.js"></script>
-        <script src="revealjs/js/reveal.js"></script>
-        <script src="js/slides.js"></script>
+        <script src="../js/jquery-1.10.2.min.js"></script>
+        <script src="../revealjs/js/reveal.js"></script>
+        <script src="../js/slides.js"></script>
   </body>
 </html>
