add external plugin

--- a/slides/index.html
+++ b/slides/index.html
@@ -23,8 +23,8 @@
   <body>
     <div class="reveal">
             <div class="slides">
-                <section>Test slide 1</section>
-                <section>Test slide 2</section>
+                <section data-external="lesson01/index.html"></section>
+                <section data-external="lesson01/index.html"></section>
             </div>
         </div>
         <script src="../js/jquery-1.10.2.min.js"></script>
