external doesnt work

--- a/slides/index.html
+++ b/slides/index.html
@@ -23,8 +23,8 @@
   <body>
     <div class="reveal">
             <div class="slides">
-                <section data-external="lesson01/index.html"></section>
-                <section data-external="lesson01/index.html"></section>
+              <section data-html="lesson01/slide01.html"></section>
+              <section data-html="lesson01/slide02.html"></section>
             </div>
         </div>
         <script src="../js/jquery-1.10.2.min.js"></script>
