--- a/slides/index.html
+++ b/slides/index.html
@@ -9,6 +9,7 @@
     <link rel="canonical" href="http://migsalazar.com/java-course">
     <link rel="stylesheet" href="../revealjs/css/reveal.css">
     <link rel="stylesheet" href="../revealjs/css/theme/black.css">
+    <link rel="stylesheet" href="../css/slides.css">
 
     <title>java-course</title>
 
@@ -22,13 +23,66 @@
   </head>
   <body>
     <div class="reveal">
-            <div class="slides">
-              <section data-html="lesson01/slide01.html"></section>
-              <section data-html="lesson01/slide02.html"></section>
-            </div>
+        <div class="slides">
+
+          <!-- slide1 -->
+          <section data-html="">
+            <section>
+              <h1>Curso Java</h1>
+              <h2>Básico e intermedio</h2>
+            </section>
+
+            <section class="text-left">
+                  <h2>Acerca de...</h2>
+                  <p>
+                    <a>Objetivo General:</a>
+                    Introducir al participante en los conceptos y herramientas más importantes del lenguaje java para la programación orientada a objetos.
+                  </p>
+                  <p>
+                    <a>Duración:</a>
+                    24 horas.
+                  </p>
+                  <p>
+                    <a>Sesiones:</a>
+                    6 sesiones de 9:00 a.m. a 1:00 p.m.
+                  </p>
+                  <p>
+                    <a>Instructor:</a>
+                    Miguel Salazar
+                  </p>
+            </section>
+
+          </section>
+
+          <!-- slide2 -->
+          <section data-html="">
+            <h2>¿Por qué Java?</h2>
+            <img class="stretch" data-src="img/hello_worl.jpg">
+          </section>
+
+          <!-- slide2 -->
+          <section data-html="">
+            <h2></h2>
+          </section>
+
+
+          <section>
+            <pre>
+              <code class="js">
+                $(function(){
+                    var prueba = "";
+
+                });
+              </code>
+
+            </pre>
+          </section>
+
         </div>
-        <script src="../js/jquery-1.10.2.min.js"></script>
-        <script src="../revealjs/js/reveal.js"></script>
-        <script src="../js/slides.js"></script>
+    </div>
+    <script src="../js/jquery-1.10.2.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/headjs/0.96/head.min.js"></script>
+    <script src="../revealjs/js/reveal.js"></script>
+    <script src="../js/slides.js"></script>
   </body>
 </html>
