--- a/slides/index.html
+++ b/slides/index.html
@@ -62,20 +62,45 @@
 
           <!-- slide2 -->
           <section data-html="">
-            <h2></h2>
+            <h2>Introducción a Java</h2>
+            <p>Java es un lenguaje de programación de alto nivel y de propósito general caracterizado principalmente por lo siguiente:</p>
+            <ul>
+              <li>Lenguaje simple</li>
+              <li>Orientado a Objetos</li>
+              <li>Distribuido</li>
+              <li>Multiproceso</li>
+              <li>Portable</li>
+              <li>Robusto</li>
+              <li>Seguro</li>
+            </ul>
+            <p>* A white paper - James Gosling, Henry McGilton, May 1996</p>
           </section>
 
+          <!-- slide3 -->
+          <section>
+            <p>La sintaxis de éste lenguaje deriva principalmente de los lenguajes C y C++,
+              sin embargo la misma naturaleza de JAVA hace que tenga menos facilidades de bajo nivel pero mayor dinamismo en alto nivel.
+            </p>
+          </section>
+
+          <!-- slide4 -->
+          <section>
+            <p>
+              En el lenguaje JAVA, todos los archivos de código fuente que podamos construir estarán en un archivo de texto plano con extensión .java.
+            </p>
+            <p>
+              Todos estos archivos, son compilados en un archivo secundario con extensión .class por el compilador javac.
+            </p>
+          </section>
 
           <section>
-            <pre>
-              <code class="js">
-                $(function(){
-                    var prueba = "";
+            <h2>La Plataforma Java</h2>
+            <ul>
+              <li>La Máquina Virtual de Java (JVM)</li>
 
-                });
-              </code>
+              <li>La Interfaz de programación de aplicaciones Java (Java API)</li>
+            </ul>
 
-            </pre>
           </section>
 
         </div>
