Setup jekyll and markdown

--- a/slides/index.html
+++ b/slides/index.html
@@ -26,36 +26,17 @@
         <div class="slides">
 
           <!-- slide1 -->
-          <section data-html="">
+          <section>
             <section>
-              <h1>Curso Java</h1>
-              <h2>Básico e intermedio</h2>
+              <h2>Curso de Java</h2>
+              <h3>Básico e intermedio</h3>
             </section>
-
-            <section class="text-left">
-                  <h2>Acerca de...</h2>
-                  <p>
-                    <a>Objetivo General:</a>
-                    Introducir al participante en los conceptos y herramientas más importantes del lenguaje java para la programación orientada a objetos.
-                  </p>
-                  <p>
-                    <a>Duración:</a>
-                    24 horas.
-                  </p>
-                  <p>
-                    <a>Sesiones:</a>
-                    6 sesiones de 9:00 a.m. a 1:00 p.m.
-                  </p>
-                  <p>
-                    <a>Instructor:</a>
-                    Miguel Salazar
-                  </p>
-            </section>
-
+            <section data-markdown="lesson01/slide01.md" data-separator="^\n\n\n"
+         data-separator-vertical="^\n\n"></section>
           </section>
 
           <!-- slide2 -->
-          <section data-html="">
+          <section>
             <h2>¿Por qué Java?</h2>
             <img class="stretch" data-src="img/hello_worl.jpg">
           </section>
