--- a/slides/index.html
+++ b/slides/index.html
@@ -4,12 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Java course">
-    <meta name="author" content="Miguel Salazar">
-    <link rel="canonical" href="http://migsalazar.com/java-course">
-    <link rel="stylesheet" href="/assets/js/revealjs/css/reveal.css">
-    <link rel="stylesheet" href="/assets/js/revealjs/css/theme/black.css">
-
+    <link rel="stylesheet" href="{{ "/assets/js/revealjs/css/reveal.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "/assets/js/revealjs/css/theme/black.css" | prepend: site:baseurl }}">
     <title>java-course</title>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
