--- a/slides/index.html
+++ b/slides/index.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/revealjs/css/reveal.css">
-    <link rel="stylesheet" href="assets/revealjs/css/theme/black.css">
-    <link rel="stylesheet" href="assets/css/slides.css">
+    <link rel="stylesheet" href="../assets/revealjs/css/reveal.css">
+    <link rel="stylesheet" href="../assets/revealjs/css/theme/black.css">
+    <link rel="stylesheet" href="../assets/css/slides.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="/assets/js/html5shiv.js"></script>
@@ -30,9 +30,9 @@
           <section data-markdown="lessons/slide05.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
         </div>
     </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/js/head.min.js"></script>
-    <script src="assets/revealjs/js/reveal.js"></script>
-    <script src="assets/js/slides.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/head.min.js"></script>
+    <script src="../assets/revealjs/js/reveal.js"></script>
+    <script src="../assets/js/slides.js"></script>
   </body>
 </html>
