a lot of slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -28,8 +28,18 @@
           <section data-markdown="lesson01/slide07.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
 
           <!-- identificadores -->
-          <section data-markdown="lesson02/slide01.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson02/slide02.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <section data-markdown="lesson02/slide08.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <section data-markdown="lesson02/slide09.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <section data-markdown="lesson02/slide10.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <section data-markdown="lesson02/slide11.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <section data-markdown="lesson02/slide12.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <section data-markdown="lesson02/slide13.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <section data-markdown="lesson02/slide14.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <section data-markdown="lesson02/slide15.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+
+          <!-- operadores -->
+          <section data-markdown="lesson03/slide16.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <section data-markdown="lesson03/slide17.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
         </div>
     </div>
     <script src="../assets/js/jquery.min.js"></script>
