--- a/slides/index.html
+++ b/slides/index.html
@@ -18,28 +18,20 @@
     <div class="reveal">
         <div class="slides">
 
+          <!-- front -->
+          <section data-markdown="lessons/lesson00.md" data-separator="^\n\n\n" data-separator-vertical="^----------$"></section>
+
           <!-- intro -->
-          <section data-markdown="lesson01/slide01.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson01/slide02.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson01/slide03.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson01/slide04.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson01/slide05.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson01/slide06.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson01/slide07.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <section data-markdown="lessons/lesson01.md" data-separator="^\n\n\n" data-separator-vertical="^----------$"></section>
 
-          <!-- identificadores -->
-          <section data-markdown="lesson02/slide08.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson02/slide09.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson02/slide10.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson02/slide11.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson02/slide12.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson02/slide13.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson02/slide14.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson02/slide15.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <!-- identifiers -->
+          <section data-markdown="lessons/lesson02.md" data-separator="^\n\n\n" data-separator-vertical="^----------$"></section>
 
-          <!-- operadores -->
-          <section data-markdown="lesson03/slide16.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
-          <section data-markdown="lesson03/slide17.md" data-separator="^\n\n\n" data-separator-vertical="^\n\n"></section>
+          <!-- operators -->
+          <section data-markdown="lessons/lesson03.md" data-separator="^\n\n\n" data-separator-vertical="^----------$"></section>
+
+          <!-- ? -->
+          <section data-markdown="" data-separator="^\n\n\n" data-separator-vertical="^----------$"></section>
         </div>
     </div>
     <script src="../assets/js/jquery.min.js"></script>
