slides slides and slides

--- a/slides/index.html
+++ b/slides/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../assets/revealjs/css/reveal.css">
     <link rel="stylesheet" href="../assets/revealjs/css/theme/black.css">
+    <link rel="stylesheet" href="../assets/revealjs/lib/css/zenburn.css">
     <link rel="stylesheet" href="../assets/css/slides.css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
