--- a/slides/index.html
+++ b/slides/index.html
@@ -20,19 +20,19 @@
         <div class="slides">
 
           <!-- front -->
-          <section data-markdown="lessons/lesson00-info.md" data-separator="^\n\n\n" data-separator-vertical="^:----------$"></section>
+          <section data-markdown="lessons/lesson00-info.md" data-separator="^\n\n\n" data-separator-vertical="^:-------------------------------------------------------------------------------$"></section>
 
           <!-- intro -->
-          <section data-markdown="lessons/lesson01-intro.md" data-separator="^\n\n\n" data-separator-vertical="^:----------$"></section>
+          <section data-markdown="lessons/lesson01-intro.md" data-separator="^\n\n\n" data-separator-vertical="^:-------------------------------------------------------------------------------$"></section>
 
           <!-- identifiers -->
-          <section data-markdown="lessons/lesson02-identifiers.md" data-separator="^\n\n\n" data-separator-vertical="^:----------$"></section>
+          <section data-markdown="lessons/lesson02-identifiers.md" data-separator="^\n\n\n" data-separator-vertical="^:-------------------------------------------------------------------------------$"></section>
 
           <!-- operators -->
-          <section data-markdown="lessons/lesson03-operators.md" data-separator="^\n\n\n" data-separator-vertical="^:----------$"></section>
+          <section data-markdown="lessons/lesson03-operators.md" data-separator="^\n\n\n" data-separator-vertical="^:-------------------------------------------------------------------------------$"></section>
 
           <!-- control flow -->
-          <section data-markdown="lessons/lesson04.md-controlflow" data-separator="^\n\n\n" data-separator-vertical="^:----------$"></section>
+          <section data-markdown="lessons/lesson04-controlflow.md" data-separator="^\n\n\n" data-separator-vertical="^:-------------------------------------------------------------------------------$"></section>
 
         </div>
     </div>
